# KaffeeKasse

./: .gitignore  .windsurfrules  Procfile  README.md  idee.md  package-lock.json  package.json  plan.md  pyproject.toml  requirements.txt  technical.md
.cursor/rules/: django-cotton.mdc
kaffee/: admin.py  apps.py  models.py  urls.py  views.py
kaffee/migrations/: 0001_initial.py  0002_abrechnungswoche_remove_konsum_nutzer_and_more.py  0003_kontobewegung_saldo_wert.py  0004_kontobewegung_ist_markiert_and_more.py  0005_transaktion_auszahlung_geldeinzahlung_kaffeeeinlage_and_more.py
kaffee/templates/account/: login.html  signup.html
kaffee/templates/allauth/layouts/: entrance.html
kaffee/templates/cotton/: badge.html  button.html  einlage_form.html  einlage_success.html  hero.html  konsum_form.html  kontoauszug_liste.html  markiert_badge.html  markierung_button.html  modal.html  pagination.html  transaction_row.html  transaction_table.html
kaffee/templates/kaffee/: einlage.html  index.html  konsum.html  profil.html  statistiken.html  test_components.html
kaffee/templates/kaffee/partials/: einlage_form.html  einlage_success.html  kontoauszug_liste.html  markiere_bewegung_modal.html  markiert_badge.html  markierung_button.html
main/: settings.py  urls.py
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
